# mungetout

./: .coveragerc  .travis.yml  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
cardiffmunger/: convert.py  gen.py  skeleton.py
docs/: Makefile  conf.py  index.rst
mungetout/: __init__.py  collect.py  convert.py  diff.py  extract.py  filter.py  gen.py
mungetout/sinks/: name.py  run.py
tests/: conftest.py  test_convert.py  test_end2end.py  test_skeleton.py
tests/samples/: raw
